fixed white space at the bottom of page in nightmode

--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -98,6 +98,7 @@ footer {
 }
 @media (max-width: 400px) {
   footer {
+    height: 100%;
     flex-direction: column;
   }
 }
