--- a/src/PageNotFound/PageNotFound.scss
+++ b/src/PageNotFound/PageNotFound.scss
@@ -1,3 +1,3 @@
 #pagenotfound-section {
-    height: 85vh;
+    min-height: 85vh;
 }
