--- a/src/Projects/Project/Neurorehab/Neurorehab.scss
+++ b/src/Projects/Project/Neurorehab/Neurorehab.scss
@@ -1,3 +1,3 @@
 #neurorehab-page {
-    height: 85vh;
+  min-height: 85vh;
 }
